--- a/index.html
+++ b/index.html
@@ -4,17 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="script.js"></script>
+    <link rel="stylesheet" type="" href="styles.css">
     <title>Rock Paper Scissors</title>
 </head>
 <body>
     <div class="game_container">
-        <div id="turn">Turn: 1</div>
-        <div id="wins">Wins: 0</div>
-        <div id="losses">Losses: 0</div>
-        <div id="draws">Draws: 0</div>
-        <h2>Please Enter your move</h2>
-        <label for="playerTurn">Your Hand:</label>
-        <input type="text" name="playerHand" id="playerTurn">
+        <div id="stats">
+            <div id="turn">Turn: 1</div>
+            <div id="wins">Wins: 0</div>
+            <div id="losses">Losses: 0</div>
+            <div id="draws">Draws: 0</div>
+        </div>
+        <div id="images">
+            <img src="/SVGs/hand.svg" alt="Picture of a Hand" id="playerImg">
+            <img src="/SVGs/hand.svg" alt="Picture of a Hand" id="computerImg">
+        <h3>Please Enter your move</h3>
+        <div>
+            <label for="playerTurn">Your Hand:</label>
+            <input type="text" name="playerHand" id="playerTurn" autocomplete="off">
+        </div>
         <div id="game-info">The computer is waiting for your turn</div>
         <input type="button" name="reset" value="reset" id="reset">
     </div>
