--- a/index.html
+++ b/index.html
@@ -4,26 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="script.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jersey+15&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="" href="styles.css">
     <title>Rock Paper Scissors</title>
 </head>
 <body>
     <div class="game_container">
         <div id="stats">
-            <div id="turn">Turn: 1</div>
-            <div id="wins">Wins: 0</div>
-            <div id="losses">Losses: 0</div>
-            <div id="draws">Draws: 0</div>
+            <h4 id="turn">Turn: 1</h4>
+            <h4 id="wins">Wins: 0</h4>
+            <h4 id="losses">Losses: 0</h4>
+            <h4 id="draws">Draws: 0</h4>
         </div>
         <div id="images">
             <img src="/SVGs/hand.svg" alt="Picture of a Hand" id="playerImg">
+            <img src="/SVGs/vs.svg" alt="Versus" id="versus">
             <img src="/SVGs/hand.svg" alt="Picture of a Hand" id="computerImg">
-        <h3>Please Enter your move</h3>
-        <div>
+        </div>
+        <div id="instructions">
+            <h3>Please Enter your move</h3>
             <label for="playerTurn">Your Hand:</label>
             <input type="text" name="playerHand" id="playerTurn" autocomplete="off">
         </div>
-        <div id="game-info">The computer is waiting for your turn</div>
+        <h3 id="game-info">The computer is waiting for your turn</h3>
         <input type="button" name="reset" value="reset" id="reset">
     </div>
 </body>
