--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <h4 id="draws">Draws: 0</h4>
         </div>
         <div id="images">
-            <img src="/SVGs/hand.svg" alt="Picture of a Hand" id="playerImg">
-            <img src="/SVGs/vs.svg" alt="Versus" id="versus">
-            <img src="/SVGs/hand.svg" alt="Picture of a Hand" id="computerImg">
+            <img src="SVGs/hand.svg" alt="Picture of a Hand" id="playerImg">
+            <img src="SVGs/vs.svg" alt="Versus" id="versus">
+            <img src="SVGs/hand.svg" alt="Picture of a Hand" id="computerImg">
         </div>
         <div id="instructions">
             <h3>Please Enter your move</h3>
